// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTriNationYearlyFromBirth — 1967-03-29 canonical golden > 2026 세운 wrapper 출력 snapshot 일치 1`] = `
{
  "crossCheck": {
    "agreement": "medium",
    "notes": [
      "3학파 중 2학파 동의 (favorable=2, unfavorable=1)",
    ],
  },
  "frames": {
    "cnMangpai": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [
        {
          "object": "午",
          "subject": {
            "element": "未",
            "pillar": "year",
          },
          "type": "합",
        },
      ],
      "school": "cn-mangpai",
      "schoolSpecificHints": {
        "emergence": "용신 wood 가 월령 卯 에 同氣 — 응기 강력",
      },
      "shensha": [],
      "targetYear": 2026,
      "yearGanji": {
        "branch": "午",
        "stem": "丙",
      },
      "yongShinDelta": {
        "netVerdict": "unfavorable",
        "reinforced": [],
        "weakened": [
          "fire",
        ],
      },
      "yongShinUsed": {
        "emergenceHint": "용신 wood 가 월령 卯 에 同氣 — 응기 강력",
        "gisin": [
          "fire",
        ],
        "primary": "wood",
        "school": "cn-mangpai",
      },
    },
    "cnZiping": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [
        {
          "object": "午",
          "subject": {
            "element": "未",
            "pillar": "year",
          },
          "type": "합",
        },
      ],
      "school": "cn-ziping",
      "schoolSpecificHints": {
        "structure": "기타",
      },
      "shensha": [],
      "targetYear": 2026,
      "yearGanji": {
        "branch": "午",
        "stem": "丙",
      },
      "yongShinDelta": {
        "netVerdict": "favorable",
        "reinforced": [
          "fire",
        ],
        "weakened": [],
      },
      "yongShinUsed": {
        "basisShenStrength": "종아",
        "gisin": [
          "water",
          "metal",
        ],
        "primary": "wood",
        "rationale": "인성 0·비겁 4 약함, 식상 6 우세 — 가종 종아격으로 식상의 흐름을 따른다",
        "school": "cn-ziping",
        "structureHint": "기타",
      },
    },
    "jp": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [
        {
          "object": "午",
          "subject": {
            "element": "未",
            "pillar": "year",
          },
          "type": "합",
        },
      ],
      "school": "jp",
      "schoolSpecificHints": {
        "favorable": "재성·관성·인성",
        "unfavorable": "식상·비겁",
      },
      "shensha": [],
      "targetYear": 2026,
      "yearGanji": {
        "branch": "午",
        "stem": "丙",
      },
      "yongShinDelta": {
        "netVerdict": "mixed",
        "reinforced": [],
        "weakened": [],
      },
      "yongShinUsed": {
        "favorable": [
          "재성",
          "관성",
          "인성",
        ],
        "school": "jp",
        "unfavorable": [
          "식상",
          "비겁",
        ],
      },
    },
    "ko": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [
        {
          "object": "午",
          "subject": {
            "element": "未",
            "pillar": "year",
          },
          "type": "합",
        },
      ],
      "school": "ko",
      "schoolSpecificHints": {
        "johu": "균형 조후 기준 보조 용신 없음 보강",
      },
      "shensha": [],
      "targetYear": 2026,
      "yearGanji": {
        "branch": "午",
        "stem": "丙",
      },
      "yongShinDelta": {
        "netVerdict": "favorable",
        "reinforced": [
          "fire",
        ],
        "weakened": [],
      },
      "yongShinUsed": {
        "basisJohuMode": "균형",
        "basisShenStrength": "종아",
        "gisin": [
          "water",
          "metal",
        ],
        "primary": "wood",
        "rationale": "인성 0·비겁 4 약함, 식상 6 우세 — 가종 종아격으로 식상의 흐름을 따른다",
        "school": "ko",
        "secondary": undefined,
      },
    },
  },
  "targetYear": 2026,
}
`;

exports[`buildTriNationYearlyFromBirth — 1967-03-29 canonical golden > targetYear=2025 도 snapshot 일치 1`] = `
{
  "crossCheck": {
    "agreement": "medium",
    "notes": [
      "3학파 중 2학파 동의 (favorable=2, unfavorable=0)",
    ],
  },
  "frames": {
    "cnMangpai": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [],
      "school": "cn-mangpai",
      "schoolSpecificHints": {
        "emergence": "용신 wood 가 월령 卯 에 同氣 — 응기 강력",
      },
      "shensha": [],
      "targetYear": 2025,
      "yearGanji": {
        "branch": "巳",
        "stem": "乙",
      },
      "yongShinDelta": {
        "netVerdict": "mixed",
        "reinforced": [
          "wood",
        ],
        "weakened": [
          "fire",
        ],
      },
      "yongShinUsed": {
        "emergenceHint": "용신 wood 가 월령 卯 에 同氣 — 응기 강력",
        "gisin": [
          "fire",
        ],
        "primary": "wood",
        "school": "cn-mangpai",
      },
    },
    "cnZiping": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [],
      "school": "cn-ziping",
      "schoolSpecificHints": {
        "structure": "기타",
      },
      "shensha": [],
      "targetYear": 2025,
      "yearGanji": {
        "branch": "巳",
        "stem": "乙",
      },
      "yongShinDelta": {
        "netVerdict": "favorable",
        "reinforced": [
          "wood",
          "fire",
        ],
        "weakened": [],
      },
      "yongShinUsed": {
        "basisShenStrength": "종아",
        "gisin": [
          "water",
          "metal",
        ],
        "primary": "wood",
        "rationale": "인성 0·비겁 4 약함, 식상 6 우세 — 가종 종아격으로 식상의 흐름을 따른다",
        "school": "cn-ziping",
        "structureHint": "기타",
      },
    },
    "jp": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [],
      "school": "jp",
      "schoolSpecificHints": {
        "favorable": "재성·관성·인성",
        "unfavorable": "식상·비겁",
      },
      "shensha": [],
      "targetYear": 2025,
      "yearGanji": {
        "branch": "巳",
        "stem": "乙",
      },
      "yongShinDelta": {
        "netVerdict": "mixed",
        "reinforced": [],
        "weakened": [],
      },
      "yongShinUsed": {
        "favorable": [
          "재성",
          "관성",
          "인성",
        ],
        "school": "jp",
        "unfavorable": [
          "식상",
          "비겁",
        ],
      },
    },
    "ko": {
      "currentDaeun": {
        "endAge": 67,
        "ganji": {
          "branch": "酉",
          "stem": "丁",
        },
        "startAge": 58,
      },
      "daeunTransition": null,
      "ganjiInteractions": [],
      "school": "ko",
      "schoolSpecificHints": {
        "johu": "균형 조후 기준 보조 용신 없음 보강",
      },
      "shensha": [],
      "targetYear": 2025,
      "yearGanji": {
        "branch": "巳",
        "stem": "乙",
      },
      "yongShinDelta": {
        "netVerdict": "favorable",
        "reinforced": [
          "wood",
          "fire",
        ],
        "weakened": [],
      },
      "yongShinUsed": {
        "basisJohuMode": "균형",
        "basisShenStrength": "종아",
        "gisin": [
          "water",
          "metal",
        ],
        "primary": "wood",
        "rationale": "인성 0·비겁 4 약함, 식상 6 우세 — 가종 종아격으로 식상의 흐름을 따른다",
        "school": "ko",
        "secondary": undefined,
      },
    },
  },
  "targetYear": 2025,
}
`;
